gccida/g1/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2386:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2386:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2387:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2387:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2407:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2407:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2410:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2410:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2414:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2414:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2417:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2417:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2424:4: error: expected ';' after expression
rtx basex; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2424:5: error: use of undeclared identifier 'basex'
rtx basex; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2428:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2433:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)y[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2447:14: error: expected expression
v8 = *( rtx *)( v2 + 16); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2448:12: error: expected ';' after expression
v9 = ( rtx)y[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/alias.c:2450:12: error: expected ';' after expression
v9 = ( rtx)v9[1]; 
           ^
           ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
